Reverting to swift in travis file and disables the custom build

--- a/.travis.yml
+++ b/.travis.yml
@@ -1,7 +1,7 @@
-language: objective-c
+language: swift
 xcode_project: ImageGallery.xcworkspace
 xcode_scheme: ImageGallery
 osx_image: xcode9.2
 xcode_sdk: iphonesimulator10.2
 #script:
-- xcodebuild -workspace ImageGallery.xcworkspace -scheme 'ImageGallery' -destination 'platform=iOS Simulator,name=iPhone 7' test
+#- xcodebuild -workspace ImageGallery.xcworkspace -scheme 'ImageGallery' -destination 'platform=iOS Simulator,name=iPhone 7' test
