--- a/.travis.yml
+++ b/.travis.yml
@@ -1,7 +1,8 @@
-language: objective-c
+language: swift
 xcode_project: ImageGallery.xcworkspace
 xcode_scheme: ImageGallery
-#osx_image: xcode9.2
-xcode_sdk: iphonesimulator10.2
-#script:
-#- xcodebuild -workspace ImageGallery.xcworkspace -scheme 'ImageGallery' -destination 'platform=iOS Simulator,name=iPhone 7' test
+osx_image: xcode9.2
+xcode_sdk: iphonesimulator11.2
+os: osx
+script:
+- set -o pipefail && xcodebuild -workspace ImageGallery.xcworkspace -scheme ImageGallery -sdk iphonesimulator -destination 'platform=iOS Simulator,OS=11.2,name=iPhone 7' build test | xcpretty -c --test --color || exit 1
