- Adds Quick and Nimble pod support for SparkImageNetwork framework - Adds a generic protocol based network layer - Adds unit tests for generic enum Result - Adds public initializers in SparkImageGalleryCore framework

--- a/ImageGallery.xcodeproj/xcshareddata/xcschemes/ImageGallery.xcscheme
+++ b/ImageGallery.xcodeproj/xcshareddata/xcschemes/ImageGallery.xcscheme
@@ -34,6 +34,20 @@
                ReferencedContainer = "container:ImageGallery.xcodeproj">
             </BuildableReference>
          </BuildActionEntry>
+         <BuildActionEntry
+            buildForTesting = "YES"
+            buildForRunning = "YES"
+            buildForProfiling = "NO"
+            buildForArchiving = "NO"
+            buildForAnalyzing = "NO">
+            <BuildableReference
+               BuildableIdentifier = "primary"
+               BlueprintIdentifier = "A89C4BBD204EF91100E91C61"
+               BuildableName = "SparkImageNetworkTests.xctest"
+               BlueprintName = "SparkImageNetworkTests"
+               ReferencedContainer = "container:ImageGallery.xcodeproj">
+            </BuildableReference>
+         </BuildActionEntry>
       </BuildActionEntries>
    </BuildAction>
    <TestAction
